Bello/y.output
Terminals unused in grammar

    ARRAY_VALUE
    PRINT
    PRINTLN
    READ_INT
    READ_FLOAT
    READ
    READ_BOOL
    READ_LINE


State 1 conflicts: 1 reduce/reduce
State 111 conflicts: 1 shift/reduce
State 190 conflicts: 1 shift/reduce


Grammar

    0 $accept: statement $end

    1 statement: single_statement execute_statement statement
    2          | statement_block execute_statement statement
    3          | error
    4          | %empty

    5 execute_statement: %empty

    6 single_statement: expression_statement SEMICOLON
    7                 | if_statement
    8                 | for_statement
    9                 | while_statement
   10                 | do_while_statement
   11                 | break_statement SEMICOLON
   12                 | continue_statement SEMICOLON
   13                 | return_statement SEMICOLON
   14                 | function_define_statement
   15                 | null_statement SEMICOLON
   16                 | var_statement SEMICOLON
   17                 | error

   18 single_statement_no_semicolon: expression_statement
   19                              | if_statement
   20                              | for_statement
   21                              | while_statement
   22                              | do_while_statement
   23                              | null_statement

   24 null_statement: %empty

   25 statement_block: LEFT_BRACE block_list RIGHT_BRACE
   26                | LEFT_BRACE RIGHT_BRACE

   27 block_list: single_statement
   28           | block_list single_statement

   29 expression_statement: expression

   30 expression: value_expression
   31           | lvalue_operation_expression
   32           | unary_expression
   33           | binary_expression
   34           | array_expression
   35           | new_array_expression

   36 lvalue_operation_expression: assign_expression
   37                            | self_operation_expression

   38 assign_expression: lvalue_expression ASSIGN expression
   39                  | lvalue_expression ADD_ASSIGN expression
   40                  | lvalue_expression SUB_ASSIGN expression
   41                  | lvalue_expression MUL_ASSIGN expression
   42                  | lvalue_expression DIV_ASSIGN expression
   43                  | lvalue_expression MOD_ASSIGN expression

   44 self_operation_expression: INCREMENT lvalue_expression
   45                          | DECREMENT lvalue_expression
   46                          | lvalue_expression INCREMENT
   47                          | lvalue_expression DECREMENT

   48 unary_expression: SUB expression
   49                 | ADD expression
   50                 | LEFT_PAREN expression RIGHT_PAREN
   51                 | NOT expression
   52                 | BIT_NOT expression

   53 binary_expression: expression ADD expression
   54                  | expression SUB expression
   55                  | expression MUL expression
   56                  | expression DIV expression
   57                  | expression MOD expression
   58                  | expression AND expression
   59                  | expression OR expression
   60                  | expression EQ expression
   61                  | expression NE expression
   62                  | expression GT expression
   63                  | expression GE expression
   64                  | expression LT expression
   65                  | expression LE expression
   66                  | expression BIT_AND expression
   67                  | expression BIT_OR expression
   68                  | expression BIT_XOR expression

   69 value_expression: INT_VALUE
   70                 | FLOAT_VALUE
   71                 | BOOLEAN_VALUE
   72                 | STRING_VALUE
   73                 | NULL_VALUE
   74                 | function_expression
   75                 | lvalue_expression

   76 lvalue_expression: IDENTIFER
   77                  | lvalue_expression evaluate_list

   78 array_expression: LEFT_QUAD element_list RIGHT_QUAD
   79                 | LEFT_QUAD RIGHT_QUAD

   80 new_array_expression: NEW_ARRAY LEFT_PAREN expression RIGHT_PAREN

   81 element_list: expression
   82             | element_list COMMA expression

   83 var_statement: VAR assign_list

   84 assign_list: IDENTIFER
   85            | IDENTIFER ASSIGN expression
   86            | assign_list COMMA IDENTIFER
   87            | assign_list COMMA IDENTIFER ASSIGN expression

   88 function_expression: IDENTIFER LEFT_PAREN argument_list RIGHT_PAREN
   89                    | IDENTIFER LEFT_PAREN RIGHT_PAREN

   90 argument_list: expression
   91              | argument_list COMMA expression

   92 evaluate_list: LEFT_QUAD expression RIGHT_QUAD
   93              | LEFT_QUAD expression COLON expression RIGHT_QUAD
   94              | LEFT_QUAD expression COLON expression COLON RIGHT_QUAD
   95              | LEFT_QUAD expression COLON expression COLON expression RIGHT_QUAD
   96              | LEFT_QUAD expression COLON RIGHT_QUAD
   97              | LEFT_QUAD expression COLON COLON RIGHT_QUAD
   98              | LEFT_QUAD expression COLON COLON expression RIGHT_QUAD
   99              | LEFT_QUAD COLON expression RIGHT_QUAD
  100              | LEFT_QUAD COLON expression COLON RIGHT_QUAD
  101              | LEFT_QUAD COLON expression COLON expression RIGHT_QUAD
  102              | LEFT_QUAD COLON COLON RIGHT_QUAD
  103              | evaluate_list LEFT_QUAD expression RIGHT_QUAD
  104              | evaluate_list LEFT_QUAD expression COLON expression RIGHT_QUAD
  105              | evaluate_list LEFT_QUAD expression COLON expression COLON RIGHT_QUAD
  106              | evaluate_list LEFT_QUAD expression COLON expression COLON expression RIGHT_QUAD
  107              | evaluate_list LEFT_QUAD expression COLON RIGHT_QUAD
  108              | evaluate_list LEFT_QUAD expression COLON COLON RIGHT_QUAD
  109              | evaluate_list LEFT_QUAD expression COLON COLON expression RIGHT_QUAD
  110              | evaluate_list LEFT_QUAD COLON expression RIGHT_QUAD
  111              | evaluate_list LEFT_QUAD COLON expression COLON RIGHT_QUAD
  112              | evaluate_list LEFT_QUAD COLON expression COLON expression RIGHT_QUAD
  113              | evaluate_list LEFT_QUAD COLON COLON RIGHT_QUAD

  114 if_statement: IF LEFT_PAREN expression RIGHT_PAREN structure_statement
  115             | IF LEFT_PAREN expression RIGHT_PAREN structure_statement ELSE structure_statement

  116 for_statement: FOR LEFT_PAREN single_statement_no_semicolon SEMICOLON expression_statement SEMICOLON single_statement_no_semicolon RIGHT_PAREN structure_statement

  117 while_statement: WHILE LEFT_PAREN expression_statement RIGHT_PAREN structure_statement

  118 do_while_statement: DO structure_statement WHILE LEFT_PAREN expression_statement RIGHT_PAREN SEMICOLON

  119 break_statement: BREAK
  120                | BREAK LEFT_PAREN expression RIGHT_PAREN

  121 continue_statement: CONTINUE
  122                   | CONTINUE LEFT_PAREN expression RIGHT_PAREN

  123 structure_statement: single_statement
  124                    | statement_block

  125 function_define_statement: FUNC IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN statement_block
  126                          | FUNC IDENTIFER LEFT_PAREN RIGHT_PAREN statement_block
  127                          | FUNC IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN single_statement
  128                          | FUNC IDENTIFER LEFT_PAREN RIGHT_PAREN single_statement

  129 parameter_list: IDENTIFER
  130               | parameter_list COMMA IDENTIFER

  131 return_statement: RETURN
  132                 | RETURN expression


Terminals, with rules where they appear

    $end (0) 0
    error (256) 3 17
    INT_VALUE <intVl> (258) 69
    BOOLEAN_VALUE <blnVl> (259) 71
    FLOAT_VALUE <fltVl> (260) 70
    STRING_VALUE <strVl> (261) 72
    NULL_VALUE (262) 73
    ARRAY_VALUE (263)
    IDENTIFER <idtf> (264) 76 84 85 86 87 88 89 125 126 127 128 129 130
    ASSIGN (265) 38 85 87
    VAR (266) 83
    ADD_ASSIGN (267) 39
    SUB_ASSIGN (268) 40
    MUL_ASSIGN (269) 41
    DIV_ASSIGN (270) 42
    MOD_ASSIGN (271) 43
    PRINT (272)
    PRINTLN (273)
    LEFT_PAREN (274) 50 80 88 89 114 115 116 117 118 120 122 125 126 127 128
    RIGHT_PAREN (275) 50 80 88 89 114 115 116 117 118 120 122 125 126 127 128
    LEFT_QUAD (276) 78 79 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
    RIGHT_QUAD (277) 78 79 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
    LEFT_BRACE (278) 25 26
    RIGHT_BRACE (279) 25 26
    SEMICOLON (280) 6 11 12 13 15 16 116 118
    COMMA (281) 82 86 87 91 130
    COLON (282) 93 94 95 96 97 98 99 100 101 102 104 105 106 107 108 109 110 111 112 113
    ADD (283) 49 53
    SUB (284) 48 54
    MUL (285) 55
    DIV (286) 56
    MOD (287) 57
    EQ (288) 60
    NE (289) 61
    GT (290) 62
    GE (291) 63
    LT (292) 64
    LE (293) 65
    AND (294) 58
    OR (295) 59
    NOT (296) 51
    BIT_AND (297) 66
    BIT_OR (298) 67
    BIT_XOR (299) 68
    BIT_NOT (300) 52
    INCREMENT (301) 44 46
    DECREMENT (302) 45 47
    IF (303) 114 115
    ELSE (304) 115
    FOR (305) 116
    WHILE (306) 117 118
    DO (307) 118
    CONTINUE (308) 121 122
    BREAK (309) 119 120
    FUNC (310) 125 126 127 128
    RETURN (311) 131 132
    READ_INT (312)
    READ_FLOAT (313)
    READ (314)
    READ_BOOL (315)
    READ_LINE (316)
    NEW_ARRAY (317) 80
    MINUS_SIGN (318)
    PLUS_SIGN (319)


Nonterminals, with rules where they appear

    $accept (65)
        on left: 0
    statement (66)
        on left: 1 2 3 4
        on right: 0 1 2
    execute_statement (67)
        on left: 5
        on right: 1 2
    single_statement <stmt> (68)
        on left: 6 7 8 9 10 11 12 13 14 15 16 17
        on right: 1 27 28 123 127 128
    single_statement_no_semicolon <stmt> (69)
        on left: 18 19 20 21 22 23
        on right: 116
    null_statement <stmt> (70)
        on left: 24
        on right: 15 23
    statement_block <stmt> (71)
        on left: 25 26
        on right: 2 124 125 126
    block_list <stmt> (72)
        on left: 27 28
        on right: 25 28
    expression_statement <stmt> (73)
        on left: 29
        on right: 6 18 116 117 118
    expression <exp> (74)
        on left: 30 31 32 33 34 35
        on right: 29 38 39 40 41 42 43 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 80 81 82 85 87 90 91 92 93 94 95 96 97 98 99 100 101 103 104 105 106 107 108 109 110 111 112 114 115 120 122 132
    lvalue_operation_expression <exp> (75)
        on left: 36 37
        on right: 31
    assign_expression <exp> (76)
        on left: 38 39 40 41 42 43
        on right: 36
    self_operation_expression <exp> (77)
        on left: 44 45 46 47
        on right: 37
    unary_expression <exp> (78)
        on left: 48 49 50 51 52
        on right: 32
    binary_expression <exp> (79)
        on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68
        on right: 33
    value_expression <exp> (80)
        on left: 69 70 71 72 73 74 75
        on right: 30
    lvalue_expression <exp> (81)
        on left: 76 77
        on right: 38 39 40 41 42 43 44 45 46 47 75 77
    array_expression <exp> (82)
        on left: 78 79
        on right: 34
    new_array_expression <exp> (83)
        on left: 80
        on right: 35
    element_list <elmtLst> (84)
        on left: 81 82
        on right: 78 82
    var_statement <stmt> (85)
        on left: 83
        on right: 16
    assign_list <asgnLst> (86)
        on left: 84 85 86 87
        on right: 83 86 87
    function_expression <exp> (87)
        on left: 88 89
        on right: 74
    argument_list <argLst> (88)
        on left: 90 91
        on right: 88 91
    evaluate_list <evlLst> (89)
        on left: 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112 113
        on right: 77 103 104 105 106 107 108 109 110 111 112 113
    if_statement <stmt> (90)
        on left: 114 115
        on right: 7 19
    for_statement <stmt> (91)
        on left: 116
        on right: 8 20
    while_statement <stmt> (92)
        on left: 117
        on right: 9 21
    do_while_statement <stmt> (93)
        on left: 118
        on right: 10 22
    break_statement <stmt> (94)
        on left: 119 120
        on right: 11
    continue_statement <stmt> (95)
        on left: 121 122
        on right: 12
    structure_statement <stmt> (96)
        on left: 123 124
        on right: 114 115 116 117 118
    function_define_statement <stmt> (97)
        on left: 125 126 127 128
        on right: 14
    parameter_list <prmLst> (98)
        on left: 129 130
        on right: 125 127 130
    return_statement <stmt> (99)
        on left: 131 132
        on right: 13


State 0

    0 $accept: . statement $end

    error          shift, and go to state 1
    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    VAR            shift, and go to state 8
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    LEFT_BRACE     shift, and go to state 11
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    IF             shift, and go to state 18
    FOR            shift, and go to state 19
    WHILE          shift, and go to state 20
    DO             shift, and go to state 21
    CONTINUE       shift, and go to state 22
    BREAK          shift, and go to state 23
    FUNC           shift, and go to state 24
    RETURN         shift, and go to state 25
    NEW_ARRAY      shift, and go to state 26

    $end       reduce using rule 4 (statement)
    SEMICOLON  reduce using rule 24 (null_statement)

    statement                    go to state 27
    single_statement             go to state 28
    null_statement               go to state 29
    statement_block              go to state 30
    expression_statement         go to state 31
    expression                   go to state 32
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    var_statement                go to state 42
    function_expression          go to state 43
    if_statement                 go to state 44
    for_statement                go to state 45
    while_statement              go to state 46
    do_while_statement           go to state 47
    break_statement              go to state 48
    continue_statement           go to state 49
    function_define_statement    go to state 50
    return_statement             go to state 51


State 1

    3 statement: error .
   17 single_statement: error .

    $end      reduce using rule 3 (statement)
    $end      [reduce using rule 17 (single_statement)]
    $default  reduce using rule 17 (single_statement)


State 2

   69 value_expression: INT_VALUE .

    $default  reduce using rule 69 (value_expression)


State 3

   71 value_expression: BOOLEAN_VALUE .

    $default  reduce using rule 71 (value_expression)


State 4

   70 value_expression: FLOAT_VALUE .

    $default  reduce using rule 70 (value_expression)


State 5

   72 value_expression: STRING_VALUE .

    $default  reduce using rule 72 (value_expression)


State 6

   73 value_expression: NULL_VALUE .

    $default  reduce using rule 73 (value_expression)


State 7

   76 lvalue_expression: IDENTIFER .
   88 function_expression: IDENTIFER . LEFT_PAREN argument_list RIGHT_PAREN
   89                    | IDENTIFER . LEFT_PAREN RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 52

    $default  reduce using rule 76 (lvalue_expression)


State 8

   83 var_statement: VAR . assign_list

    IDENTIFER  shift, and go to state 53

    assign_list  go to state 54


State 9

   50 unary_expression: LEFT_PAREN . expression RIGHT_PAREN

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    expression                   go to state 55
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    function_expression          go to state 43


State 10

   78 array_expression: LEFT_QUAD . element_list RIGHT_QUAD
   79                 | LEFT_QUAD . RIGHT_QUAD

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    RIGHT_QUAD     shift, and go to state 56
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    expression                   go to state 57
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    element_list                 go to state 58
    function_expression          go to state 43


State 11

   25 statement_block: LEFT_BRACE . block_list RIGHT_BRACE
   26                | LEFT_BRACE . RIGHT_BRACE

    error          shift, and go to state 59
    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    VAR            shift, and go to state 8
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    RIGHT_BRACE    shift, and go to state 60
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    IF             shift, and go to state 18
    FOR            shift, and go to state 19
    WHILE          shift, and go to state 20
    DO             shift, and go to state 21
    CONTINUE       shift, and go to state 22
    BREAK          shift, and go to state 23
    FUNC           shift, and go to state 24
    RETURN         shift, and go to state 25
    NEW_ARRAY      shift, and go to state 26

    SEMICOLON  reduce using rule 24 (null_statement)

    single_statement             go to state 61
    null_statement               go to state 29
    block_list                   go to state 62
    expression_statement         go to state 31
    expression                   go to state 32
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    var_statement                go to state 42
    function_expression          go to state 43
    if_statement                 go to state 44
    for_statement                go to state 45
    while_statement              go to state 46
    do_while_statement           go to state 47
    break_statement              go to state 48
    continue_statement           go to state 49
    function_define_statement    go to state 50
    return_statement             go to state 51


State 12

   49 unary_expression: ADD . expression

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    expression                   go to state 63
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    function_expression          go to state 43


State 13

   48 unary_expression: SUB . expression

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    expression                   go to state 64
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    function_expression          go to state 43


State 14

   51 unary_expression: NOT . expression

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    expression                   go to state 65
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    function_expression          go to state 43


State 15

   52 unary_expression: BIT_NOT . expression

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    expression                   go to state 66
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    function_expression          go to state 43


State 16

   44 self_operation_expression: INCREMENT . lvalue_expression

    IDENTIFER  shift, and go to state 67

    lvalue_expression  go to state 68


State 17

   45 self_operation_expression: DECREMENT . lvalue_expression

    IDENTIFER  shift, and go to state 67

    lvalue_expression  go to state 69


State 18

  114 if_statement: IF . LEFT_PAREN expression RIGHT_PAREN structure_statement
  115             | IF . LEFT_PAREN expression RIGHT_PAREN structure_statement ELSE structure_statement

    LEFT_PAREN  shift, and go to state 70


State 19

  116 for_statement: FOR . LEFT_PAREN single_statement_no_semicolon SEMICOLON expression_statement SEMICOLON single_statement_no_semicolon RIGHT_PAREN structure_statement

    LEFT_PAREN  shift, and go to state 71


State 20

  117 while_statement: WHILE . LEFT_PAREN expression_statement RIGHT_PAREN structure_statement

    LEFT_PAREN  shift, and go to state 72


State 21

  118 do_while_statement: DO . structure_statement WHILE LEFT_PAREN expression_statement RIGHT_PAREN SEMICOLON

    error          shift, and go to state 59
    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    VAR            shift, and go to state 8
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    LEFT_BRACE     shift, and go to state 11
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    IF             shift, and go to state 18
    FOR            shift, and go to state 19
    WHILE          shift, and go to state 20
    DO             shift, and go to state 21
    CONTINUE       shift, and go to state 22
    BREAK          shift, and go to state 23
    FUNC           shift, and go to state 24
    RETURN         shift, and go to state 25
    NEW_ARRAY      shift, and go to state 26

    SEMICOLON  reduce using rule 24 (null_statement)

    single_statement             go to state 73
    null_statement               go to state 29
    statement_block              go to state 74
    expression_statement         go to state 31
    expression                   go to state 32
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    var_statement                go to state 42
    function_expression          go to state 43
    if_statement                 go to state 44
    for_statement                go to state 45
    while_statement              go to state 46
    do_while_statement           go to state 47
    break_statement              go to state 48
    continue_statement           go to state 49
    structure_statement          go to state 75
    function_define_statement    go to state 50
    return_statement             go to state 51


State 22

  121 continue_statement: CONTINUE .
  122                   | CONTINUE . LEFT_PAREN expression RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 76

    $default  reduce using rule 121 (continue_statement)


State 23

  119 break_statement: BREAK .
  120                | BREAK . LEFT_PAREN expression RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 77

    $default  reduce using rule 119 (break_statement)


State 24

  125 function_define_statement: FUNC . IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN statement_block
  126                          | FUNC . IDENTIFER LEFT_PAREN RIGHT_PAREN statement_block
  127                          | FUNC . IDENTIFER LEFT_PAREN parameter_list RIGHT_PAREN single_statement
  128                          | FUNC . IDENTIFER LEFT_PAREN RIGHT_PAREN single_statement

    IDENTIFER  shift, and go to state 78


State 25

  131 return_statement: RETURN .
  132                 | RETURN . expression

    INT_VALUE      shift, and go to state 2
    BOOLEAN_VALUE  shift, and go to state 3
    FLOAT_VALUE    shift, and go to state 4
    STRING_VALUE   shift, and go to state 5
    NULL_VALUE     shift, and go to state 6
    IDENTIFER      shift, and go to state 7
    LEFT_PAREN     shift, and go to state 9
    LEFT_QUAD      shift, and go to state 10
    ADD            shift, and go to state 12
    SUB            shift, and go to state 13
    NOT            shift, and go to state 14
    BIT_NOT        shift, and go to state 15
    INCREMENT      shift, and go to state 16
    DECREMENT      shift, and go to state 17
    NEW_ARRAY      shift, and go to state 26

    $default  reduce using rule 131 (return_statement)

    expression                   go to state 79
    lvalue_operation_expression  go to state 33
    assign_expression            go to state 34
    self_operation_expression    go to state 35
    unary_expression             go to state 36
    binary_expression            go to state 37
    value_expression             go to state 38
    lvalue_expression            go to state 39
    array_expression             go to state 40
    new_array_expression         go to state 41
    function_expression          go to state 43


State 26

   80 new_array_expression: NEW_ARRAY . LEFT_PAREN expression RIGHT_PAREN

    LEFT_PAREN  shift, and go to state 80


State 27

    0 $accept: statement . $end

    $end  shift, and go to state 81


State 28

    1 statement: single_statement . execute_statement statement

    $default  reduce using rule 5 (execute_statement)

    execute_statement  go to state 82


State 29

   15 single_statement: null_statement . SEMICOLON

    SEMICOLON  shift, and go to state 83


State 30

    2 statement: statement_block . execute_statement statement

    $default  reduce using rule 5 (execute_statement)

    execute_statement  go to state 84


State 31

    6 single_statement: expression_statement . SEMICOLON

    SEMICOLON  shift, and go to state 85


State 32

   29 expression_statement: expression .
   53 binary_expression: expression . ADD expression
   54                  | expression . SUB expression
   55                  | expression . MUL expression
   56                  | expression . DIV expression
   57                  | expression . MOD expression
   58                  | expression . AND expression
   59                  | expression . OR expression
   60                  | expression . EQ expression
   61                  | expression . NE expression
   62                  | expression . GT expression
   63                  | expression . GE expression
   64                  | expression . LT expression
   65                  | expression . LE expression
   66                  | expression . BIT_AND expression
   67                  | expression . BIT_OR expression
   68                  | expression . BIT_XOR expression

    ADD      shift, and go to state 86
    SUB      shift, and go to state 87
    MUL      shift, and go to state 88
    DIV      shift, and go to state 89
    MOD      shift, and go to state 90
    EQ       shift, and go to state 91
    NE       shift, and go to state 92
    GT       shift, and go to state 93
    GE       shift, and go to state 94
    LT       shift, and go to state 95
    LE       shift, and go to state 96
    AND      shift, and go to state 97
    OR       shift, and go to state 98
    BIT_AND  shift, and go to state 99
    BIT_OR   shift, and go to state 100
    BIT_XOR  shift, and go to state 101

    $default  reduce using rule 29 (expression_statement)


State 33

   31 expression: lvalue_operation_expression .

    $default  reduce using rule 31 (expression)


State 34

   36 lvalue_operation_expression: assign_expression .

    $default  reduce using rule 36 (lvalue_operation_expression)


State 35

   37 lvalue_operation_expression: self_operation_expression .

    $default  reduce using rule 37 (lvalue_operation_expression)


State 36

   32 expression: unary_expression .

    $default  reduce using rule 32 (expression)


State 37

   33 expression: binary_expression .

    $default  reduce using rule 33 (expression)


State 38

   30 expression: value_expression .

    $default  reduce using rule 30 (expression)


State 39

   38 assign_expression: lvalue_expression . ASSIGN expression
   39                  | lvalue_expression . ADD_ASSIGN expression
   40                  | lvalue_expression . SUB_ASSIGN expression
   41                  | lvalue_expression . MUL_ASSIGN expression
   42                  | lvalue_expression . DIV_ASSIGN expression
   43                  | lvalue_expression . MOD_ASSIGN expression
   46 self_operation_expression: lvalue_expression . INCREMENT
   47                          | lvalue_expression . DECREMENT
   75 value_expression: lvalue_expression .
   77 lvalue_expression: lvalue_expression . evaluate_list

    ASSIGN      shift, and go to state 102
    ADD_ASSIGN  shift, and go to state 103
    SUB_ASSIGN  shift, and go to state 104
    MUL_ASSIGN  shift, and go to state 105
    DIV_ASSIGN  shift, and go to state 106
    MOD_ASSIGN  shift, and go to state 107
    LEFT_QUAD   shift, and go to state 108
    INCREMENT   shift, and go to state 109
    DECREMENT   shift, and go to state 110

    $default  reduce using rule 75 (value_expression)

    evaluate_list  go to state 111


State 40

   34 expression: array_expression .

    $default  reduce using rule 34 (expression)


State 41

   35 expression: new_array_expression .

    $default  reduce using rule 35 (expression)


State 42

   16 single_statement: var_statement . SEMICOLON

    SEMICOLON  shift, and go to state 112


State 43

   74 value_expression: function_expression .

    $default  reduce using rule 74 (value_expression)


State 44

    7 single_statement: if_statement .

    $default  reduce using rule 7 (single_statement)


State 45

    8 single_statement: for_statement .

    $default  reduce using rule 8 (single_statement)


State 46

    9 single_statement: while_statement .

    $default  reduce using rule 9 (single_statement)


State 47

   10 single_statement: do_while_statement .

    $default  reduce using rule 10 (single_statement)


State 48

   11 single_statement: break_statement . SEMICOLON

    SEMICOLON  shift, and go to state 113


State 49

   12 single_statement: continue_statement . SEMICOLON

    SEMICOLON  shift, and go to state 114


State 50

   14 single_statement: function_define_statement .
